@@ -6,6 +6,11 @@ Version 1.4
 
 (bugfix release, release date to be decided)
 
+- Fixed a bug that caused deprecated territory codes not being
+  converted properly by the subtag resolving.  This for instance
+  showed up when trying to use ``und_UK`` as a language code
+  which now properly resolves to ``en_GB``.
+
 Version 1.3
 -----------
 
